# Qt6-Framework-Core-Intermediate

./: README.md
03-QObject/01-Signals_and_Slots/: CMakeLists.txt  main.cpp  test.cpp  test.h
03-QObject/02-Disable_Copy/: CMakeLists.txt  main.cpp
04-Memory_Management/01-Parent_Child_Relationship/: CMakeLists.txt  main.cpp  test.cpp  test.h
04-Memory_Management/02-Setting_Getting_Parent/: CMakeLists.txt  main.cpp
04-Memory_Management/03-QScopedPointer/: CMakeLists.txt  main.cpp  test.cpp  test.h
04-Memory_Management/04-QSharedPointer/: CMakeLists.txt  main.cpp  test.cpp
06-Views/01-QByteArrayView/: CMakeLists.txt  main.cpp
06-Views/02-QStringView/: CMakeLists.txt  main.cpp
07-Settings/01-QSettings/: CMakeLists.txt  main.cpp
10-Encoding/01-ASCII/: ASCII Table.html  CMakeLists.txt  main.cpp
10-Encoding/02-UTF-8/: CMakeLists.txt  main.cpp
10-Encoding/03-UTF-16/: CMakeLists.txt  main.cpp
10-Encoding/04-Base64/: CMakeLists.txt  main.cpp
10-Encoding/05-Hex/: CMakeLists.txt  main.cpp
11-Compression/01-Data_Compression/: CMakeLists.txt  main.cpp
11-Compression/02-File_Compression/: CMakeLists.txt  main.cpp
12-Serialization/01-Serializing_and_Deserializing_Data/: CMakeLists.txt  main.cpp
12-Serialization/02-Serializing_Class/: CMakeLists.txt  main.cpp  test.cpp
12-Serialization/03-Serializing_to_JSON/: CMakeLists.txt  converter.cpp  converter.h  main.cpp  test.cpp  test.h
12-Serialization/04-Serializing_to_XML/: CMakeLists.txt  converter.cpp  converter.h  main.cpp  test.cpp  test.h
13-Algorithms_and_Macros/01-qDeleteAll/: CMakeLists.txt  main.cpp  test.cpp
13-Algorithms_and_Macros/02-Filling_a_Container/: CMakeLists.txt  main.cpp
13-Algorithms_and_Macros/03-Sorting_a_Container/: CMakeLists.txt  main.cpp
13-Algorithms_and_Macros/04-Comparing_Containers/: CMakeLists.txt  main.cpp
13-Algorithms_and_Macros/05-Copying_Containers/: CMakeLists.txt  main.cpp
13-Algorithms_and_Macros/06-Custom_Macro/: CMakeLists.txt  main.cpp
13-Algorithms_and_Macros/07-typedef/: CMakeLists.txt  main.cpp
14-Working_with_Operating_System/01-QSysInfo/: CMakeLists.txt  main.cpp
14-Working_with_Operating_System/02-QProcess/: CMakeLists.txt  main.cpp
15-Timers/01-Timer/: CMakeLists.txt  main.cpp
15-Timers/02-Intervals/: CMakeLists.txt  main.cpp  test.cpp  test.h
15-Timers/03-QFileSystemWatcher/: CMakeLists.txt  watcher.cpp  watcher.h
15-Timers/04-Process_Timeout/: CMakeLists.txt  main.cpp
16-Basic_Threading/01-QThread/: CMakeLists.txt  main.cpp
16-Basic_Threading/02-Move_to_Thread/: CMakeLists.txt  main.cpp  task.cpp  task.h
16-Basic_Threading/03-QThreadPool/: CMakeLists.txt
